# bob_nlp_tools

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
.github/workflows/: ros2_ci.yml
bob_nlp_tools/: __init__.py  driver.py  filter.py  normalizer.py  router.py  setup.cfg  summarizer.py
