<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bob_nlp_tools</name>
  <version>1.0.0</version>
  <description>ROS 2 semantic NLP tools for high-level robot intelligence via OpenAI-compatible APIs.</description>
  <maintainer email="bobmeuchelm@gmail.com">Bob Ros</maintainer>
  <license>Apache-2.0</license>

  <url type="website">https://github.com/bob-ros2/bob_nlp_tools</url>
  <url type="repository">https://github.com/bob-ros2/bob_nlp_tools</url>
  <url type="bugtracker">https://github.com/bob-ros2/bob_nlp_tools/issues</url>

  <author email="bobmeuchelm@gmail.com">Bob Ros</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
