[develop]
script_dir=$base/lib/bob_nlp_tools
[install]
install_scripts=$base/lib/bob_nlp_tools
[options.entry_points]
console_scripts =
    router = bob_nlp_tools.router:main
    filter = bob_nlp_tools.filter:main
    summarizer = bob_nlp_tools.summarizer:main
    normalizer = bob_nlp_tools.normalizer:main
